--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,12 @@
             <artifactId>elasticsearch</artifactId>
             <version>5.5.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.vaadin.external.google</groupId>
+            <artifactId>android-json</artifactId>
+            <version>0.0.20131108.vaadin1</version>
+            <scope>compile</scope>
+        </dependency>
 
 
         <!--   <dependency>
